--- a/US_TDA.qmd
+++ b/US_TDA.qmd
@@ -72,7 +72,6 @@ One benefit to this reduction in parameters is that it removes some of the barri
 Beyond the main objectives of this analysis, we hope that this paper is serve as an on-ramp for anyone interested in TDA but feels inundated with jargon upon early stage researching. Out objectives are to add to the small body of literature whose main focus is applications with BallMapper.\footnote{add Mapper survey paper refrence here}
 We go about this by first showing BallMapper's use in exploratory data analysis (EDA). Using our results from EDA, we then will compare BallMapper's outputs (topological graphs) to notable historic economic events [and maybe less known?]. Lastly we will test the stability and consistency of BallMapper's output. The conclusion will talk broadly about results and other considerations of note, and the discussion will elaborate on future work and questions for research.
 
-
 and is increasingly being applied to From the small body of literature we have reviewed, TDABM has removed many of the parameters that are required for more traditional methods of TDA. Generally speaking, traditional TDA contains four broad steps, each with multiple user-defined parameters. Conversely, TDABM has reduced this process to an the user selecting their data, a coloring variable and an epsilon value -- details on this follow below. What should be noted, although TDABM reduces the number of steps needed to produce similar outcomes of traditional TDA methods, we lose control of being able fine tune out outputs. We also find that interpreting results becomes more difficult. However, TDABM is still in its infancy, so there is not a large body of research on interpretation. [@dlotko2019ballmapper] One major motivation for this paper is a paper written by @dlotko2019macroeconomy that applied TDABM to a global macroeconomic dataset to compare how countries have evolved over time, their transformation from the Great Depression Era, and various views on wealth and inequality. We could not find other TDA literature found specifically focused on the macroeconomic economy of singular countries. Hence, our topic of choice.
 
 # METHODS AND PROCEDURES
@@ -127,27 +126,27 @@ Once these data are in annual form, we then found the percent change from the pr
 ## METHODS
 
 ### *BallMapper*
+In depth descriptions of Ball Mapper's theory have been covered in various papers. As the aim of our paper is to provided a introductory foray into BallMapper and TDA in general, we will omit some of the more technical details below but provide reference to more in-depth explanations.
 
-#### *The Theory*
-[Explanation of the mathematical theory of BallMapper and the algorithim are described in]
-Before going over the algorithm there are a few
-For the following algorithm some useful definitions are as follows:
-- We will use the word pointcloud instead of dataset.
-- Conventionally the Euclidean distance metric is used; let $$d = dist() is used as our distance metric, denote $$
-The core steps of the TDABM algorithm are as follows:
+Mathematically, the concept of Ball Mapper supposes we are given a dataset $X$ in $K$ dimensions with $N$ observations.
+Then for some point $x \in X$ and given $\epsilon > 0$, we create a ball, $b(x, \epsilon)$, centered around $x$ with radius $\epsilon$.
+Our aim to create set of balls, $B$, such that $B = \bigcup_{i = 0}^{n} b(x, \epsilon)$ for all $x \in B$.
 
-1. From your dataset (pointcloud) select a random point, $\alpha_n$, and draw circle with radius epsilon, $$\epsilon$$.
-2. For some distance metric where $$d$$ is the distance from, any points inside the circle will be associated with point $$\alpha_n$$.
-4. Repeat steps 1 - 3 until there are no more points to select and you have a set $${\alpha_1 \text{,...,} \alpha_n}$$.
-5. Draw an edge between $$\alpha_i$$ and $$\alpha_j$$ if they share a point(s) for our set $${\alpha_1 \text{,...,} \alpha_n}$$.
+In practice, though, we call our dataset $X$ a Point Cloud with $N$ rows. Our dimensions, $K$, are each column of our data and usually our point cloud has dimensions $K > 2$. When we are selecting a point, $x_i \in X$, to draw a ball, we are randomly selecting a row of our point cloud and then taking he Euclidean Distance in $K$ dimensions such that $i \neq j$ and $x_i, x_j \in X$ to every other $x_j$ in our point cloud. Then with our given epsilon, $\epsilon > 0$, we assign any points where the distance is less to epsilon to a ball with center $x_i$ (@eq-euclideanDistance).
+$$
+d(x_i, x_j) = 
+\sqrt{(x_{i_1} - x_{j_1})^2 + (x_{i_2} - x_{j_2})^2 + \ldots + (x_{i_k} - x_{j_k})^2} < \epsilon
+$${#eq-euclideanDistance}
 
-Although the above list five steps, it should be noted that this is just the algorithm and is all done with one function call.[^software] From the steps above, the only thing the user of TDABM is responsible for is creation of a pointcloud and choosing an appropriate $$\epsilon$$.
-- Summary of algorithm
-- correlation considerations
+Algorithmically, Ball Mapper is as follows:
 
+1. Select a random point $x_i$ from point cloud $X$.
+2. Given $\epsilon > 0$, construct a ball $b(x_i, \epsilon)$ with a center $x_i$ by associating all other points where $d(x_i, x_j) < \epsilon$ and $i \neq j$.\footnote{See @eq-euclideanDistance for $d(x_i, x_j)$}
+3. Place $b_i, \epsilon)$ in a set of balls $B$.
+4. Repeat steps 1-3 until all $x \in X$ belong to some $b(x, \epsilon)$.
+5. Draw an edge between $b_i, b_j \in B$ if they contain the same $x$, weighting the edge based on number distinct $x$ values $b_i$ and $b_j$ both contain.
 
-
-## *Analysis*
+### *Analysis*
 As we saw above we need three parts for BallMapper: a Point Cloud, a variable to color by, and an epsilon. For this analysis, our point cloud was made up of 16 variables (dimensions) which can be see in @tbl-Analysis_Dimensions. It is important to note two dimensions in our analysis were created: *Unemployment Change* and *Fed Rate Change*. All other variables where transformed but no new data created from them. Albeit, Unemployment is a lagging indicator and the Federal Funds Rate is a policy or reactive choice, we thought these two measures were important. Since Unemployment is a flow, is it useful to see if the hose of unemployed is expanding or shrinking. Similarly, it is informative to see changes in the Federal Funds Rate to see the policy choices made are working or not.
 ```{r}
 #| label: tbl-Analysis_Dimensions
@@ -162,38 +161,96 @@ As we saw above we need three parts for BallMapper: a Point Cloud, a variable to
 source(paste(getwd(), "scripts/Table3_Analysis_Dimensions.R", sep = "/"))
 analysis_dimensions_table
 ```
-To our knowledge there is no research about finding epsilon values for BallMapper. So to find a BM graph which represents our data well we go about finding an epsilon in an iterative manner. We first start by finding the upper and lower bounds of our map, trying small and large epsilon values, respectively. What we look for in our lower bound is a map
+To our knowledge there is no research about finding epsilon values for BallMapper. So to find a BM graph which represents our data well we go about finding an epsilon in an iterative manner. We first start by finding the upper and lower bounds of our map, trying small and large epsilon values, respectively. What we look for in our lower bound is a map such that the epsilon is small enough to make most all, or all depending on the dataset size, data points singletons, giving an image of many disconnected points. Conversely, our upper bound is an epsilon so large that it includes most every point and produces a map of two or less nodes. With this idea of finding a lower and upper bound, in an iterative manner aim to create around 100 maps at even intervals, review the maps, continue to narrow our interval to a map that shows our data "in focus", and presents what we might think is a good or interesting representation of our data.
 
+For our data we started off by using an interval of $[0.3-1.4]$ and then narrowed our interval to $[0.4-0.75]$. When reviewing our maps, we look for connected components (connected nodes) appearing or disappearing, significant changes in coloration in the graph, or the any patterns in size or color of the nodes. We finally decided on the value $0.511$ because it presented a little of all the aforementioned features we look for: coloration and size patterning and connected components.
 
-Since BM is a developing method, we have not found any standardized way to finding a epsilon(s) that describes our data well. So to ensure that we do not miss any potential interesting outputs, our strategy is carried out # stages.
-We first started by taking out standardized pointcloud and found the upper and lower bounds of our graphs, 0.3-1.4 respectively.
-To find the lower bound we test various epsilons such that every record (row) of data is its own node in our graph. To find the upper bound we do the opposite and find an epsilon so large that we reduce our graph to just a few nodes, usually connected.
-After finding these initial bounds we aim to compute around 100 graphs at even intervals from our lower to upper bound. From this range of graphs we observe a sub-range of epsilon values where our graphs are not too noisy nor hide too much information. For this step we found that epsilon values 0.4-0.75 gave us an interesting range of graphs. We look for components (connected nodes) appearing or disappearing, significant changes in coloration in the graph, [...]. Finally, after looking at our  reduced range we decided on an epsilon of $$0.511$$.
+For our initial map we used *Year* as our coloring variable. This is because Year is a metric that is not dependent on any economic variables and is a good marker for large macroeconomic events such as the dot com bubble of the 2000s. *Year* is not included in the construction of our Point Cloud. This is an important point because we show later that being able to create metrics to color by adds a depth the Ball Mapper's usefulness, even if the metrics themselves are not included in our Point Cloud.
+
+Instead of using the graph output provided by BallMapper, we created graph output using other R packages to bring clarity to our analysis. We have not changed the core structure of the BallMapper output, but rather the presentation. The largest changes of note to the graphs are: spread out nodes to avoid overlapping; display the edge weights between nodes, representing the number number of shared values between two nodes; custom color scale for accessibility.
 
 # CONCLUSION
-## *Exploratory Data Analysis (EDA) Application*
-For our exploratory data analysis exploration we colored our graph by the $$Year$$. The coloration of each node representing the average of all the years within in a node. The size of our node is commensurate with the number of years it houses. Instead of using the graph output provided by BallMapper, we created graph output using other R packages to bring clarity to our analysis. We have not changed the core structure of the BallMapper output, but rather the presentation. The largest changes of note to the graphs are: spread out nodes to avoid overlapping; display the edge weights between nodes, representing the number number of shared values between two nodes; custom color scale for accessibility.
+**Exploratory Data Analysis (EDA) Application**
 
-Looking at our graph, we first observe the overall structure of our graph. There is one large connected component, one small component, and the rest singleton nodes. For the largest connected component, we immediately are interested in the three large nodes (24, 4, and 26) with more overlap than the rest of the component. Additionally, we also notice that each of the large nodes have some single node flares. This structure tells us that for this component, there are three distinct groups and each flare representing similar data to the group but perhaps an outlier in specific ways.
+For our exploratory data analysis exploration we colored our graph by the *Year*, @fig-EDA. The coloration of each node represents the average of all the years within in a node. The size of our node is commensurate with the number of years it houses. Between two nodes, th edge thickness is determined the number of same data points in each endpoint.Looking at @fig-EDA, we first observe the overall structure of our graph. There is one large connected component, one small component, and the rest singleton nodes.\footnote{A Connected Component is a subset of nodes in our graph such that each point in the subset has a path to all other points in the subset.} For the largest connected component (C1), we immediately are interested in the three large nodes (4, 24, and 26) because they are the largest in size for C1 and the same for their edge thickness (edge strength). Additionally, we also notice that each of the three large nodes have at least one flare (node connected only to themselves) as well as sharing others. What this structure tells us is, there are three distinct groups and each flare representing similar data to that specific group but perhaps is distinctly different to the other flares.
+```{r}
+#| label: fig-EDA
+#| fig-cap: "Ball Mapper Graph colored by Year with Epsilon set to 0.511."
+#| fig-cap-location: bottom
+#| fig-width: 12
+#| fig-height: 8
+#| out-width: "80%"
+#| fig-pos: "H"
+#| echo: false
+#| eval: true
+#| warning: false
 
-The small component that we see is of interest because it tells us us that these related groups distinctly different from all other groups but similar enough to each other to be connected. Seeing these small components like this sometimes can indicate outliers in data. In our case this could be economic years which were recessions or of extraordinary growth. We also could interpret our singleton nodes in the same manner. Each on representing an outlier year for a singular variable or combination of variables for our data.
+# Set Year Coloring
+coloring <- final_data |>
+    select(Year) |>
+    as.data.frame()
 
-Node 26 in the large component seem to represent recovery years after big economic shocks. Some years were "Non-Labor Recovery" years but generally things were working as they were suppose to.
+# Set Epsilon
+e <- 0.511
 
-Node 31 seems to be a varation of recovery because rates where so low already the gov was a bit "cornered" with monetary policy tools.
+# Create BM Output
+BM_Year <- BallMapper(points = pointcloud, values = coloring, epsilon = e)
+BM_Year <- bm_to_igraph(BM_Year)
 
-Node 10 seems to be another variaove on reconvery because there was a lot of economic stimulus and help. Losts of wanting to recover provided by the government.
+# Output Map
+source(paste(getwd(), "functions/bm_ggraph.R", sep = "/"))
+ggraph_Year <- bm_ggraph(BM_Year, coloring = coloring, epsilon = e)
+ggraph_Year
+```
+The small component (C2), nodes 2 and 27, are of interest because it tells us us that these related nodes are somehow distinctly different from C1 and all other nodes. Seeing a small components like this sometimes can indicate outliers in data. In our case, this could be years where large economic events happened such as a recessions or extraordinary growth. However, we also can see this behavior in singleton nodes much like we have @fig-EDA. When we look at the coloration of the singleton nodes, we see indication of outlier events such as The Great Recession and the COVID-19 Pandemic.
 
-Node 24 was "pressure cooker" economy. Everything firing on all cyliders.
+To hark back to our discussion of C1, when we investigate nodes 4, 24, and 26 we indeed notice a pattern with the three generally: for the whole year the US was in an expansionary state. Node 4 shows us an "ideal" version of the economy. We have personal income and compensation slightly higher than inflation, sitting around 2%. Unemployment is a little elevated but historically not unusually high.
+For Nodes 24 and 26 we see two different sides of large economic shocks. Node 24 shows us years where the economy is starting to get "over it's skis". That is, it is starting growing faster than it can keep up with but it's not necessarily too late. Node 26 on the other hand consists of years following right after recessions or points where the economy was over heating. Most of the years in Node 26, follow what economist call a "Jobless Recovery".\footnote{https://www.stlouisfed.org/publications/regional-economist/april-2011/jobless-recoveries-causes-and-consequences} Usually marked by growth returning to the economy but unemployment being "sticky" and not falling as business starts to take off.
+For the flares and smaller points that are connect each of our large nodes in C1, we find that some years are in both the smaller node and larger one, which creates our edge. However they also contain additional years which are related nodes 4, 24, or 26 but instead describe transition years to these large nodes.
 
-### *Small Comparative Analysis*
-- "New Deal"
-- 08 financial crisis
-- Covid
-- Flash Crash 87
-- Tech Boom
-- AI Boom
-- Oil Embargo/ high unemployment
+**Fisher Effect**
+Using the Fisher Equation we can color our topological graph with the approximated real interested rate (@fisherEquation).\footnote{https://inomics.com/terms/fisher-effect-1545486}. Although we know that the Fisher Equation is an approximation and does not hold well when nominal interest rates (Fed Rate) are relatily high and time spans are short, @fig-Fisher shows us a stark picture of our economic history and important time periods.\footnote{https://link.springer.com/chapter/10.1007/978-3-031-76140-9_9}
+
+$$
+\text{Real Interest Rate} \approx \text{Fed Rate} - \text{Inflation}
+$$#eq-fisherEquation
+
+Looking at nodes 19-22, we notice that these years consists of the years 1981-1984, the years during and following the "Volker Shock".\footnote{https://www.federalreservehistory.org/essays/great-inflation} What is interesting about why these nodes are colored is that these nodes see to show the impact of Volker's decision to raise interest and the lag that took place when raising rates.\footnote{https://www.stlouisfed.org/on-the-economy/2023/oct/what-are-long-variable-lags-monetary-policy}
+
+On the lower end the of Fisher Effect, we notice nodes 14, 28, 31, 33, 34 (1975, 2008, 2011-2012, 2021, 2022 respectively) show a negative value for @eq-fisherEquation. In these year rates were already extremely low, or the economy just came off a huge economic shock. In 1975 the fed aggressively lowered rates due to climbing inflation and high unemployment rates from the 1973-'74 oil embargo.\footnote{https://www.federalreservehistory.org/essays/oil-shock-of-1973-74} In 2021-'22 the COVID-19 Pandemic stimulus checks were going to cause inflation but the fed did not want to raise rates too aggressively.
+
+
+
+```{r}
+#| label: fig-Fisher
+#| fig-cap: "Ball Mapper Graph colored by Fisher Equation with Epsilon set to 0.511."
+#| fig-cap-location: bottom
+#| fig-width: 12
+#| fig-height: 8
+#| out-width: "80%"
+#| fig-pos: "H"
+#| echo: false
+#| eval: true
+#| warning: false
+
+# Set Year Coloring
+coloring <- final_data |>
+    select(Fisher_Equation) |>
+    as.data.frame()
+
+# Set Epsilon
+e <- 0.511
+
+# Create BM Output
+BM_Fisher <- BallMapper(points = pointcloud, values = coloring, epsilon = e)
+BM_Fisher <- bm_to_igraph(BM_Fisher)
+
+# Output Map
+source(paste(getwd(), "functions/bm_ggraph.R", sep = "/"))
+ggraph_Fisher <- bm_ggraph(BM_Fisher, coloring = coloring, epsilon = e)
+ggraph_Fisher
+```
+
 
 ### *Robustness and Stabilization*
 - Shuffle Dataset --> Run BallMapper
@@ -206,46 +263,81 @@ Node 24 was "pressure cooker" economy. Everything firing on all cyliders.
 # DISCUSSION
 # REFERENCES
 
+
+# SUPPLEMENTARY
+```{r}
+
+```
+
+```{r}
+node_4 <- final_data[V(BM_Year)$members[4] |> unlist(), ]
+node_24 <- final_data[V(BM_Year)$members[24] |> unlist(), ]
+node_26 <- final_data[V(BM_Year)$members[26] |> unlist(), ]
+
+node_4 <- node_4 |> 
+  summarise(across(-Year, mean)) |> 
+  pivot_longer(everything(), names_to = "Measure", 
+               values_to = "Node 4 Avg. - The Sweet Spot")
+node_24 <- node_24 |>
+  summarise(across(-Year, mean)) |> 
+  pivot_longer(everything(), names_to = "Measure", 
+               values_to = "Node 24 Avg. - Overheating")
+node_26 <- node_26 |> 
+  summarise(across(-Year, mean)) |> 
+  pivot_longer(everything(), names_to = "Measure", 
+               values_to = "Node 26 Avg. - Healthy Recovery")
+
+all_nodes <- node_4 |> 
+  left_join(node_24, by = "Measure") |> 
+  left_join(node_26, by = "Measure") |>
+  filter(Measure != "row_id") |>
+  gt() |>
+  opt_row_striping()
+```
+
+```{r}
+#| label: tbl-C1_4
+#| tbl-cap: "Component C1, Node 4 Members"
+#| tbl-cap-location: bottom
+#| tbl-pos: "H"
+#| echo: false
+#| eval: true
+#| warning: false
+
+final_data[V(BM_Year)$members[4] |> unlist(), ] |>
+  gt() |>
+  tab_options(table.width = pct(100))
+```
+
+```{r}
+#| label: tbl-C1_24
+#| tbl-cap: "Component C1, Node 24 Members"
+#| tbl-cap-location: bottom
+#| tbl-pos: "H"
+#| echo: false
+#| eval: true
+#| warning: false
+
+final_data[V(BM_Year)$members[24] |> unlist(), ] |>
+  gt() |>
+  tab_options(table.width = pct(100))
+```
+
+```{r}
+#| label: tbl-C1_26
+#| tbl-cap: "Component C1, Node 26 Members"
+#| tbl-cap-location: bottom
+#| tbl-pos: "H"
+#| echo: false
+#| eval: true
+#| warning: false
+
+final_data[V(BM_Year)$members[26] |> unlist(), ] |>
+  gt() |>
+  tab_options(table.width = pct(100))
+```
 # Old Paper
 
-### Pointcloud Construction
-
-Looking at our correlation table (), we observe moderate to strong correlations between the pairwise combinations of GDP, PCE, Ig, and Imports. We also see a strong correlation between CPI and Interest Rates. Since these correlations are moderate to high, it's worth noting that the shape of our output may be reflected by these correlations. They also could express themselves with similar coloring of TDABM graphs [@dlotko2019macroeconomy].
-
-### Cloud Building
-In our [Data](#sec-data) section, we noted that some calculations were needed before our analysis. Additionally, for the Federal Funds Rate, the Unemployment Rate, and CPI we had to take extra steps and considerations while constructing out pointcloud. Since the Federal Funds Rate and the Unemployment Rate are already a rate-based measurements, instead of taking a percent change from the previous year, we instead took the standard non-weight average rate by each year. For CPI, this data was given on a monthly-basis, we calculated it using our [General Percent Change Formula](#eq-generalpctchange) with $k=12$.
-
-[^examples]: Some very good examples and explanations can be found in [@dlotko2022tdabmfinance] and [@dlotko2019financialratiosstockreturns] which touch on the finer details of TDABM algorithm. A very good illustrative example can be seen in the pre-print [@Dlotko2021].
-[^pointcloud]: Poincloud can be thought as: a high-dimensional dataset that contains n-rows and m-cols such that m > 1.
-
-[^software]: There are packages available both in R and Python under the names BallMapper and pyBallMapper, respectively.
-
-
-## Results
-
-### Interpretation of TDA BallMapper Graphs, An Abridged Version
-In we are presented with what looks like a graph, in the mathematical sense; a display of points (nodes) and edges --some connected while others are not connected at all (satellites). If we do not change the poincloud or $\epsilon$ of our TDABM graph, we will get the same "shape" of the graph regardless of the coloration we choose.
-
-Nodes are colored depending on the users interest. In , we are focusing color by year. Coloration calculated by taking the average of the data that is "inside" each node, in our case the average value of the years. Further, if there is only one data point in a node (i.e. a satellite points), the node will appear small and the coloration will reflect as seen on the legend. Conversely, if the node is large, this indicates more data is "inside" the node, and the average value could be reflecting the mean values of a large or small variance.
-
-
-### General Remarks
-We initially notice a large connected component[^connectedcomponent] (component A) on the right side of our graph, as well as a smaller connected component (component B) on the lower left side. Noting the coloration, there are three main sections: the right, bottom, and upper-left. On the bottom and sweeping upward to the left we see there are multiple satellite points. These can be of interest because they may indicate outliers in our data.[^outliers]  Focusing back towards component A, we notice that the two largest nodes, $28$ and $22$,  which seem to represent the late 2010s and the dot-Com boom, respectively. We also note that there is a arm coming off the upper-right portion of component A, as well as smaller, lollipop, features emerging at the bottom and top of component A.[^interpretation]
-
-
-### Time Travel
-Looking at , we see that our graph is colored by year.[^supplement] In this section we will only highlight a few observations in detail due to the nature of this paper. Additional areas for investigation can be found in the [Conclusion]. 
-
-Mentioned above, we observed the satellite points in the lower half of the graph. If we look at the upper-right quadrant, we see that it consists of nodes $\{1, 16, 25, 27\}$. Looking at we see that it covers the 2020 Pandemic and the Financial Crisis and its aftermath. Seeing a general coloration from the recent 10 - 15 years we would expect to see some of the recent outlier economic events here. Indeed, node $25$ consists of two of the most recent economic downturns, 2009 and 2020. However, what is interesting is that node $27$ consists of three years closely following the 2008-2009 Financial crisis. However, the years following the 2020 COVID Pandemic can be found scattered across nodes $\{6, 8, 24, 28, 29\}$. Looking at node $27$ we find that the common thread is high unemployment. In contrast, the years following the Pandemic are not the same year to year.[^aftercovid]
-
-Shfiting our focus towards component A, it consists of data most similar to the economic years between the 1990s - 2010s. Meanwhile, looking at component B and the general lower area of our graph, we see that it represents the Great Inflation period of the 1970s - early 1980s [ivestopedia article]. Looking at nodes $12 - 20$, we get exactly ten years of data[^greatinflation] where there was know high inflation, high unemployment, and in general know to be bad time economically for the US (). Something of interest to note is that nodes $14$ and $15$ consist of 1976 - 1978. This three year period based on data seems to show more normal economic conditions. On the other hand, we see that all the other years in this grouping (nodes $12 - 20$) show signs of a struggling economy in some way.
-
-[^connectedcomponent]: In graph theory, a connected component is one in which there exists a path from a node to every other node for a set of nodes and edges.
-[^outliers]: We have not found any literature yet on whether this observation is empirically true.
-[^interpretation]: The observations mentioned above good starting places for interpreting BallMapper graphs.
-[^supplement]: Supplementary graphs displaying coloration based on different variables can be found in Supplement_1.pdf.
-[^greatinflation]: 1974 - 1984
-[^aftercovid]: *2021:* An outlier, we see higher levels of unemployment and inflation. We see high PCE, Ig, and imports; *2022:* Nodes $\{8, 28\}$ we see that there is higher than normal inflation, export, and imports; *2023:* Nodes $\{6, 24\}$, we see low inflation and low unemployment.
 
 ## Discussion
 
@@ -254,9 +346,6 @@ This paper serves as a proof-of-concept of the usefulness of TDABM as a methodol
 In our section we briefly went over two ways to interpret TDABM graphs. As seen in many other, longer papers written by Dlotko and colleagues, there is a lot of room to expound our TDABM graph here,though that is beyond the scope of this paper. In general, though, we can see that TDBM can give insight into our data that we might not see otherwise. Seeing that there is data that is not like the others gives an indication that there is something to investigate. Consider our comparison of the 08' - 09' financial crisis and the 2020 COVID Pandemic: We see learned that the years following the financial crisis were similar economically. Another way to view this is, clustering revels that the financial crisis was a singular problem that spurred the collapse of the financial system. Conversely, the COVID pandemic was a singular issue but exposed many different weaknesses in our current world.
 
 For the future development of TDABM, and TDA in general, there are many possibilities of future research and one glaring downside. The downside to TDA is that it is a high barrier to entry to understand the methodologies inner workings. Those with a technical background will have an easier time, but nonetheless a higher barrier than methods such as linear regressions.  Subject wise, TDA has an advantage in some of the social sciences because it can be somewhat of a bridge between qualitative and quantitative analyses. TDABM has been used to analyze the Brexit Vote data, seeking to understand quantitative and qualitative motivations behind its outcome @Rudkin2023. TDA also has the advantages of dimension reduction which could be useful to the life-sciences. Fields such as genetics, chemistry, and biology have many fields of data, and being able to consolidate it into an understandable form could benefit the body of knowledge greatly.
-
-\newpage
-## References
 
 
 ## Data Source
